import {
  TestAdapter,
  setEnvVariables,
} from '@chainlink/external-adapter-framework/util/testing-utils'
import * as nock from 'nock'
import { mockPackagesResponseSuccess, mockResponseSuccess } from './fixtures'

describe('execute', () => {
  let spy: jest.SpyInstance
  let testAdapter: TestAdapter<any>
  let oldEnv: NodeJS.ProcessEnv

  beforeAll(async () => {
    oldEnv = JSON.parse(JSON.stringify(process.env))
    process.env.ETHHOL_API_KEY = 'fake-api-key'
    process.env.COLLATERAL_API_KEY = 'fake-collateral-api-key'
    process.env.API_ENDPOINT = 'https://localhost:3324'
    process.env.COLLATERAL_API_ENDPOINT = 'https://localhost:3325'
    process.env.API_LIMIT = '1'
    process.env.BACKGROUND_EXECUTE_MS = '0'
    const mockDate = new Date('2001-01-01T11:11:11.111Z')
    spy = jest.spyOn(Date, 'now').mockReturnValue(mockDate.getTime())

    const adapter = (await import('./../../src')).adapter
    adapter.rateLimiting = undefined
    testAdapter = await TestAdapter.startWithMockedCache(adapter, {
      testAdapter: {} as TestAdapter<never>,
    })
  })

  afterAll(async () => {
    setEnvVariables(oldEnv)
    await testAdapter.api.close()
    nock.restore()
    nock.cleanAll()
    spy.mockRestore()
  })

  describe('wallet endpoint', () => {
    it('should return success', async () => {
      const data = {
        vaultId: 'b0bb5449c1e4926542ce693b4db2e883',
        network: 'ethereum',
        chainId: 'testnet',
        endpoint: 'wallet',
        coin: 'ETHHOL',
      }
      mockResponseSuccess()
      const response = await testAdapter.request(data)
      expect(response.statusCode).toBe(200)
      expect(response.json()).toMatchSnapshot()
    })
  })

  describe('packages endpoint', () => {
    it('should return success', async () => {
      mockPackagesResponseSuccess()

      const response = await testAdapter.request({
        endpoint: 'packages',
        packageId: 'pkg-123456',
        assetType: 'BTC',
      })

      expect(response.statusCode).toBe(200)
      expect(response.json()).toMatchSnapshot()
    })
  })
})
