// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute packages endpoint should return success 1`] = `
{
  "data": {
    "assets": [
      {
        "asset": {
          "assetType": "BTC",
        },
        "quantity": "1.5",
      },
      {
        "asset": {
          "assetType": "ETH",
        },
        "quantity": "2.3",
      },
      {
        "asset": {
          "assetType": "BTC",
        },
        "quantity": "0.8",
      },
    ],
    "result": 2.3,
  },
  "meta": {
    "adapterName": "ANCHORAGE",
    "metrics": {
      "feedId": "{"packageId":"pkg-123456","assetType":"btc"}",
    },
  },
  "result": 2.3,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute wallet endpoint should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "0xEc8907aDA68E963C4AD7C7F11a1a846cfd2fA50A",
        "chainId": "testnet",
        "network": "ethereum",
      },
      {
        "address": "0x77928478770209020dE7e36E02b905d1CA9f92BE",
        "chainId": "testnet",
        "network": "ethereum",
      },
    ],
  },
  "meta": {
    "adapterName": "ANCHORAGE",
    "metrics": {
      "feedId": "{"vaultId":"b0bb5449c1e4926542ce693b4db2e883","coin":"ethhol","chainId":"testnet","network":"ethereum"}",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
